examples/test/testpolicy8215.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8215
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key10: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value16
          key32: value2
          key39: value20
      podSelector:
        matchLabels:
          key26: value26
